# TAPIR

./: .gitignore  pyproject.toml  requirements_inference.txt  setup.cfg
notebooks/: demo_yeast.ipynb
