[metadata]
name = tapnet
author = DeepMind
description = TAPIR: Tracking Any Point with per-frame Initialization and temporal Refinement
keywords =
    Point tracking
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ElpadoCan/TAPIR
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: BSD License
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Utilities

[options]
packages = find:
python_requires =
    >=3.8
include_package_data = True
install_requires =
    chex
    jax
    jaxline
    optax
    dm-haiku
    dm-tree
    typing_extensions
    matplotlib
    mediapy
    opencv-python-headless
    einshape
